plugins/tunneling/tailscale/recipes/manifests/public-demo-operator-funnel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-demo-funnel
  namespace: opute-public
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: public-demo
      port:
        number: 80
  tls:
  - hosts:
    - opute-public
